# tabletop-lab

./: .gitignore  README.md  pyproject.toml  setup.py
codex_tasks/: undersight_simulator_prompt.md
scripts/: compare_variants.py  run_game.py  run_simulation.py  run_web.py
src/tabletop_lab/: __init__.py
src/tabletop_lab/engine/: __init__.py  actions.py  bots.py  cards.py  metrics.py  rules.py  simulator.py  state.py  transcript.py  variants.py  zones.py
src/tabletop_lab/games/: __init__.py
src/tabletop_lab/games/black_ledger/: __init__.py  actions.py  bots.py  cards.py  metrics.py  rules.py  state.py  variants.py
src/tabletop_lab/games/undersight/: ASSUMPTIONS.md  __init__.py  actions.py  bots.py  cards.py  metrics.py  rules.py  state.py  variants.py
src/tabletop_lab/web/: __init__.py  app.py  database.py  models.py  services.py
src/tabletop_lab/web/static/: app.css  app.js
src/tabletop_lab/web/templates/: base.html  codex_job_confirm.html  codex_job_detail.html  compare_runs.html  edit_game.html  game_detail.html  help.html  index.html  new_game.html  (+3 more)
tests/: __init__.py
tests/black_ledger/: __init__.py  conftest.py  test_bots.py  test_burn.py  test_call.py  test_claim.py  test_closing.py  test_count.py  test_cover.py  test_deck.py  test_furnace.py  test_hidden_info.py  test_metrics.py  test_scoring.py  test_setup.py  test_variants.py
tests/engine/: test_metrics.py  test_seed_replay.py  test_zones.py
tests/undersight/: conftest.py  test_actions.py  test_cli.py  test_scoring_end_seed.py  test_setup.py
tests/web/: test_database.py  test_web_app.py
