[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tabletop-lab"
version = "0.1.0"
description = "Reusable simulation framework for small tabletop card and token games."
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["tabletop_lab*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
